# E7L-S-protocol

./: .gitignore  Anchor.toml  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  typescript
.github/: .env  file-filters.yml
.github/workflows/: build-rust-client.yml
cli/: command.ts  scripts.ts
clients/js/: .gitignore  CONTRIBUTING.md  README.md  package.json  tsconfig.json
clients/js/src/: index.ts  plugin.ts  utils.ts
clients/js/src/actions/: index.ts  initializeAdmin.ts
clients/js/test/: _setup.ts  getProgram.test.ts
clients/rust/: CONTRIBUTING.md  Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs
configs/: kinobi.cjs  shank.cjs  validator.cjs
idls/: e7l_s_protocol.json  e7l_s_protocol_program.json
keys/: E1.json
lib/: constant.ts  scripts.ts  types.ts  util.ts
programs/e7l-s-protocol/: Cargo.toml  README.md
programs/e7l-s-protocol/src/: constant.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  util.rs
programs/e7l-s-protocol/src/instructions/: admin_initialize.rs  init_main.rs  link_nft.rs  link_pnft.rs  mod.rs  sync_nft.rs  sync_pnft.rs  unlink_nft.rs  unlink_pnft.rs
tests/: e7l-s-protocol.ts
